# tokyo-drift-rl

./: .coverage  .gitignore  2023-04-16-17-19-22.bag  2023-04-17-19-42-17.bag  ADVANCED_FEATURES_COMPLETE.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CLEAN_WEBSITE_README.md  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  DRIFT_GYM_IMPROVEMENTS.md  FINAL_RESULTS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PROJECT_MAP.md  QUICK_START.md  QUICK_START_RESEARCH.md  README.md  REPOSITORY_STATUS.md  REPRODUCE.md  RESEARCH_GUIDE.md  SESSION_SUMMARY.md  SIMULATOR_README.md  SIMULATOR_TRANSFORMATION.md  START_HERE.md  TESTING_GUIDE.md  TOKYO_DRIFT_THEME.md  TRANSFORMATION_SUMMARY.md  VISUAL_ENV_GUIDE.md  WEB_UI_GUIDE.md  align.py  benchmark_all.py  collect_ikd_data_corrected.py  collect_ikd_data_from_tracking.py  compare_all_methods.py  demo_enhanced.py  demo_visual_env.py  (+52 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
NEW_REPO_FILES/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
autonomous_drift/: __init__.py
autonomous_drift/envs/: __init__.py  drift_env.py  drift_env_enhanced.py
bag files/: 2023-04-17-21-48-35.bag
bag files and data/: joystick_max_speed.bag
bag files and data/2023-04-24-21-34-37/: _slash_joystick.csv
bag files and data/joystick_max_speed/: joystick_with_random_imu.csv
bag files and data/simple-turning-data/: turn_with_2.0.csv
bag files and data/turn_with_1.0/: _slash_joystick.csv
bag files and data/turn_with_2.0/: _slash_joystick.csv
bag files and data/turn_with_4.0/: _slash_joystick.csv
bag-files-and-data/: simple-teleop.bag  simple_drift.bag  tight_ccw.bag
bag-files-and-data/experiment_bags/: loose_ccw.bag  loose_cw.bag  tight_cw.bag
bag-files-and-data/loose-curvature-drifting/: _slash_joystick.csv
bag-files-and-data/loose_ccw/: _slash_joystick.csv  _slash_vectornav_slash_IMU.csv  loose_ccw.csv
bag-files-and-data/loose_cw/: _slash_joystick.csv  _slash_vectornav_slash_IMU.csv  loose_cw.csv
bag-files-and-data/processed-data/: 2.csv  3.csv  8.csv
bag-files-and-data/simple-turning-data/: merged-turning-data.csv  turn_with_3.0.csv  turn_with_4.0.csv  turn_with_5.0.csv
bag-files-and-data/tight_ccw/: _slash_joystick.csv  _slash_vectornav_slash_IMU.csv  tight_ccw.csv
bag-files-and-data/tight_cw/: _slash_joystick.csv  _slash_vectornav_slash_IMU.csv  tight_cw.csv
benchmark_results/: results.json
circle data/: _slash_joystick.csv  ikddata2.csv  simple_circle.bag
collected bag files/turn_with_3.0/: _slash_joystick.csv
comparison_results/: RESULTS.md  results.json
configs/: circle_navigation.yaml  default.yaml  loose_drifting.yaml  simulator.yaml  tight_drifting.yaml
data/: ikd_corrected_data.npz  ikd_corrected_large.npz  ikd_real_data.npz  ikd_tracking_data.npz
dataset/: graph.py  ikddata2.csv  tight-drifting-data-2.csv  turn_with_1.0.csv  turn_with_2.0.csv  turn_with_3.0.csv  turn_with_4.0.csv  turn_with_5.0.csv  turn_with_6.0.csv
dc_saves/sac_loose_0/: events.out.tfevents.1760428590.MacBookPro.lan
dc_saves/sac_loose_1/: events.out.tfevents.1760428841.MacBookPro.lan
dc_saves/sac_loose_2/: actor.pt  critic1.pt  critic2.pt  events.out.tfevents.1760428873.MacBookPro.lan
dc_saves/sac_run_0/: actor.pt  critic1.pt  critic2.pt  events.out.tfevents.1760465627.MacBookPro.lan
docs/: GETTING_STARTED.md  REPRODUCING_PAPER.md  SIMULATOR_GUIDE.md
drift-showcase/: package.json  tailwind.config.ts
drift-showcase/app/: globals.css  layout.tsx  page.tsx
drift-showcase/components/: ResultsChart.tsx  SimulationViewer.tsx
drift_gym/: README.md  README_ADVANCED.md  RESEARCH_GRADE_FEATURES.md  __init__.py  setup.py
drift_gym/agents/: __init__.py  moving_obstacles.py
drift_gym/config/: default_config.yaml
drift_gym/drift_gym/: README.md
drift_with_cone/: _slash_joystick.csv
drifting data/: 2023-04-18-04-22-36.bag  ikddata2.csv
examples/: generate_synthetic_data.py  simulate_paper_experiments.py
experiments/: __init__.py  ablation_study.py  benchmark_algorithms.py  evaluation.py
ikddata2/: _slash_joystick.csv  _slash_vectornav_slash_IMU.csv  omeedtehrani_accessKeys (1) 2.numbers
old_dataset/: drift_with_cone.csv  ikddata2.csv  turn_with_1.0.csv  turn_with_2.0.csv  turn_with_5.0.csv
scripts/: run_benchmarks.py
simple-teleop/: _slash_joystick.csv
simple-turning-data/: turn_with_4.0.csv
simple_drift/: _slash_joystick.csv
tests/: __init__.py  test_ekf.py  test_ikd_model.py  test_metrics.py  test_sensors.py  test_simulator.py
trained_models/: ikd_corrected.pt  ikd_final.pt  ikd_model.pt  ikd_quick_test.pt  ikd_tracking.pt
turn_with_2.0/: _slash_joystick.csv
turn_with_6.0/: _slash_joystick.csv
web-ui/: ENVIRONMENT_SELECTOR_EXAMPLE.tsx  README.md  REBUILD_INSTRUCTIONS.md  package-lock.json  package.json  tailwind.config.ts
(+94 files in other folders)
