[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-drift"
version = "1.0.0"
description = "Research-grade autonomous vehicle drifting with deep RL"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Omeed Tehrani", email = "omeed@example.com"},
]
keywords = ["reinforcement-learning", "autonomous-vehicles", "drifting", "gymnasium", "deep-rl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "gymnasium>=0.28.0",
    "pygame>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "tensorboard>=2.10.0",
    "wandb>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "flake8>=5.0.0",
    "pre-commit>=2.20.0",
]
3d = [
    "panda3d>=1.10.13",
    "pyvista>=0.38.0",
    "vtk>=9.2.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=1.0.0",
]
all = [
    "autonomous-drift[dev,3d,docs]",
]

[project.urls]
Homepage = "https://github.com/msuv08/autonomous-vehicle-drifting"
Documentation = "https://autonomous-vehicle-drifting.readthedocs.io"
Repository = "https://github.com/msuv08/autonomous-vehicle-drifting"
"Bug Tracker" = "https://github.com/msuv08/autonomous-vehicle-drifting/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autonomous_drift*", "src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[project.entry-points."gymnasium.envs"]
DriftEnv-v0 = "autonomous_drift.envs:DriftEnv"
