[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-gym"
version = "1.0.0"
description = "Research-grade drift control environment with realistic sensors and state estimation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["reinforcement-learning", "autonomous-vehicles", "drift-control", "robotics", "gymnasium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "gymnasium>=0.29.0",
    "pygame>=2.6.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]
experiments = [
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]
all = [
    "drift-gym[dev,experiments]",
]

[project.urls]
Homepage = "https://github.com/yourusername/drift-gym"
Documentation = "https://github.com/yourusername/drift-gym/tree/main/docs"
Repository = "https://github.com/yourusername/drift-gym"
"Bug Tracker" = "https://github.com/yourusername/drift-gym/issues"

[project.scripts]
drift-gym-benchmark = "experiments.benchmark_algorithms:main"
drift-gym-ablation = "experiments.ablation_study:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=drift_gym --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
